Explicitly install python and build tools for Railway

--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -1,2 +1,2 @@
 [phases.setup]
-nixPkgs = ["cmake", "gcc", "gnumake", "pkg-config"]
+nixPkgs = ["python311", "cmake", "gcc", "gnumake", "pkg-config"]
