--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -1,2 +1,5 @@
 [phases.setup]
 nixPkgs = ["python311", "cmake", "gcc", "gnumake", "pkg-config"]
+
+[phases.install]
+cmds = ["pip install -r requirements.txt"]
