--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -1,5 +1,12 @@
 [phases.setup]
-nixPkgs = ["python311", "cmake", "gcc", "gnumake", "pkg-config"]
+nixPkgs = ["python311", "python311Packages.pip", "python311Packages.venv", "cmake", "gcc", "gnumake", "pkg-config"] # Added pip and venv explicitly
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = [
+    "python -m venv /opt/venv",       # Create a virtual environment
+    ". /opt/venv/bin/activate",       # Activate the virtual environment
+    "pip install -r requirements.txt" # Install packages into the venv
+]
+
+[start]
+cmd = ". /opt/venv/bin/activate && uvicorn app:app --host 0.0.0.0 --port $PORT" # Activate venv for start command too
